--- a/src/assets/scss/_partial/_icon.scss
+++ b/src/assets/scss/_partial/_icon.scss
@@ -28,3 +28,8 @@
   width: 52px;
   height: 49px;
 }
+.icon-close{
+  background-image: url('../../image/icon_close.png');
+  width: 37px;
+  height: 37px;
+}
