--- a/src/assets/scss/_partial/_main.scss
+++ b/src/assets/scss/_partial/_main.scss
@@ -13,6 +13,9 @@
       }
     }
   }
+  .content-container{
+    margin-bottom: 30px;
+  }
   .overview-wrap{
     margin-top: 20px;
     display: flex;
