--- a/src/assets/scss/style_mobile.scss
+++ b/src/assets/scss/style_mobile.scss
@@ -18,6 +18,7 @@
 @import './_partial/gnb';
 @import './_partial/nav';
 @import './_partial/footer';
+@import './_partial/all_menu';
 
 // 페이지
 @import './_partial/main';
