업데이트 및 수정

--- a/src/assets/scss/_partial/_all_menu.scss
+++ b/src/assets/scss/_partial/_all_menu.scss
@@ -9,6 +9,7 @@
   display: none;
   &.on{
     display: block;
+    z-index: 2;
   }
   .header {
     position: relative;
@@ -85,5 +86,9 @@
         }
       }
     }
+  }
+  .cs-number{
+    margin-top: 20px;
+    padding: 0 22px;
   }
 }
