--- a/src/assets/scss/_partial/_pagination.scss
+++ b/src/assets/scss/_partial/_pagination.scss
@@ -2,7 +2,7 @@
   display: flex;
   gap: 5px;
   margin: 10px 0;
-  justify-content: space-between;
+  justify-content: center;
   a{
     display: inline-flex;
     height: 25px;
