--- a/src/assets/scss/style_mobile.scss
+++ b/src/assets/scss/style_mobile.scss
@@ -19,6 +19,8 @@
 @import './_partial/nav';
 @import './_partial/footer';
 @import './_partial/all_menu';
+@import './_partial/introduce';
+@import './_partial/deposit';
 
 // 페이지
 @import './_partial/main';
