--- a/inc/style/style_mobile.css
+++ b/inc/style/style_mobile.css
@@ -701,7 +701,7 @@ textarea.default-input {
   display: flex;
   gap: 5px;
   margin: 10px 0;
-  justify-content: center;
+  justify-content: space-between;
 }
 .pagination a {
   display: inline-flex;
@@ -1144,14 +1144,6 @@ footer .info {
 .main .contact .content-container .agree .checkbox-wrap input[type=checkbox] {
   accent-color: #f49c00;
 }
-.main .contact .content-container .subject {
-  margin-top: 10px;
-  margin-bottom: 5px;
-}
-.main .contact .content-container .subject select {
-  width: 100%;
-  font-size: 12px;
-}
 .main .contact .content-container .info {
   margin-top: 10px;
   display: flex;
@@ -1448,14 +1440,14 @@ footer .info {
 .apply-class .banners ul > li .class-banner .title {
   position: absolute;
   top: 20%;
-  left: 34%;
+  left: 44%;
   font-size: 11px;
   font-weight: 600;
 }
 .apply-class .banners ul > li .class-banner .price {
   position: absolute;
   top: 50%;
-  left: 33%;
+  left: 30%;
 }
 .apply-class .banners ul > li .class-banner .price .as-is {
   font-size: 12px;
@@ -1494,7 +1486,7 @@ footer .info {
   position: absolute;
   display: inline-flex;
   border-radius: 30px;
-  padding: 0 10px;
+  width: 80px;
   height: 23px;
   align-items: center;
   justify-content: center;
