--- a/src/assets/scss/_partial/_table_default.scss
+++ b/src/assets/scss/_partial/_table_default.scss
@@ -10,6 +10,7 @@
       height: $tableTdHeight;
       border: 1px solid $tableBorderColor;
       padding: 7px;
+      letter-spacing: -0.5px;
     }
   }
   &.th-align-l {
